--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,17 +361,53 @@ h1, h2, h3, h4, h5, h6 {
 .film-item {
     padding: 0 10px;
 }
+.film-link {
+    text-decoration: none;
+    display: block;
+}
+.film-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(158, 255, 0, 0.2); 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0; 
+    transition: all 0.4s ease;
+    backdrop-filter: blur(2px); 
+}
+.overlay-content {
+    color: #fff;
+    text-align: center;
+    transform: translateY(20px); /* Muncul dari bawah dikit */
+    transition: all 0.4s ease;
+}
+.overlay-content i {
+    font-size: 1.5rem;
+    display: block;
+    color: #9eff00; /* Ikon warna neon */
+}
+
+.overlay-content span {
+    font-weight: 800;
+    letter-spacing: 2px;
+    font-size: 0.9rem;
+    text-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+}
 
 .film-frame {
-    width: 350px;
+    position: relative; 
+    width: 350px; 
     height: 220px;
-    background: #111;
     filter: grayscale(100%) brightness(0.3);
     transition: all 0.5s ease;
     border: 1px solid #333;
     overflow: hidden;
+    border-radius: 4px;
 }
-
 .film-frame img {
     width: 100%;
     height: 100%;
@@ -385,7 +421,13 @@ h1, h2, h3, h4, h5, h6 {
     border-color: #9eff00;
     box-shadow: 0 0 20px rgba(158, 255, 0, 0.3);
 }
+.film-frame:hover .film-overlay {
+    opacity: 1;
+}
 
+.film-frame:hover .overlay-content {
+    transform: translateY(0);
+}
 /* KEYFRAMES SEAMLESS LOOP */
 @keyframes infiniteFilm {
     0% {
